Implement SDK v2 batch operations error handling with automatic retry
This commit adds production-grade error handling infrastructure for batch
write and batch delete operations following AWS SDK v2 best practices.

Major Changes:
- Enhanced BatchWriteException with rich API (unprocessed entities, retry context, exception details)
- Enhanced BatchDeleteException with identical API for consistency
- Added BatchWriteRetryConfig with AWS SDK v2 defaults (8 retries, 100ms base delay, 20s max, jitter enabled)
- Updated ExceptionHandler to support both write and delete operations
- Migrated entity annotations from SDK v1 to SDK v2 Enhanced Client
- Updated event listeners to use PageIterable instead of PaginatedQueryList/PaginatedScanList
- Unified type converters to AttributeConverter (replacing DynamoDBTypeConverter and DynamoDBMarshaller)

New Features:
- Automatic retry with configurable exponential backoff for batch operations
- Type-safe access to unprocessed entities: getUnprocessedEntities(Class<T>)
- Retry context tracking: getRetriesAttempted()
- Original exception preservation: hasOriginalException()
- Consumer-configurable retry behavior via BatchWriteRetryConfig

Documentation:
- MIGRATION_GUIDE_V1_TO_V2.md - Complete migration guide for consumers
- BATCH_OPERATIONS_ERROR_HANDLING.md - Production patterns and use cases
- BATCH_RETRY_CONFIGURATION.md - Retry configuration guide
- SDK_V2_BATCH_WRITE_MIGRATION_SUMMARY.md - Implementation summary

Tests:
- Comprehensive test coverage for BatchWriteException (15 test cases)
- Comprehensive test coverage for BatchDeleteException (15 test cases)
- BatchWriteRetryConfig tests validating AWS defaults and exponential backoff

Note: Tests written but not yet run (JAVA_HOME configuration needed).
DynamoDBTemplate still uses SDK v1 and will be migrated in future commits.

Breaking Changes:
- BatchWriteException constructor changed to include unprocessed entities and retry count
- BatchDeleteException constructor changed t